[gd_scene load_steps=6 format=3 uid="uid://c6t1bdev130aw"]

[ext_resource type="Texture2D" uid="uid://cyrr4eycg3er" path="res://MiniGameAssets/paper.png" id="1_8wi6m"]
[ext_resource type="Script" uid="uid://grpe7tvv5oma" path="res://MiniGameTscn/passwordupgrade_3.gd" id="1_gk5do"]
[ext_resource type="FontFile" uid="uid://duf2yfwdtohl8" path="res://FONTS/retropix.ttf/retropix.ttf" id="2_gk5do"]
[ext_resource type="Script" uid="uid://c6jdjdav5halj" path="res://rich_text_label.gd" id="3_cs5cl"]
[ext_resource type="Texture2D" uid="uid://8rl6u5wr6vsy" path="res://MiniGameAssets/test.png" id="4_fxt1j"]

[node name="passwordupgrade_3" type="CanvasLayer"]
script = ExtResource("1_gk5do")

[node name="TextureRect2" type="TextureRect" parent="."]
offset_left = 214.0
offset_top = 25.0
offset_right = 910.0
offset_bottom = 589.0
texture = ExtResource("1_8wi6m")

[node name="TitleLabel" type="RichTextLabel" parent="TextureRect2"]
layout_mode = 0
offset_left = 183.0
offset_top = 44.0
offset_right = 4083.0
offset_bottom = 474.0
scale = Vector2(0.1, 0.1)
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("2_gk5do")
theme_override_font_sizes/normal_font_size = 300
bbcode_enabled = true
script = ExtResource("3_cs5cl")

[node name="HintText" type="RichTextLabel" parent="TextureRect2"]
layout_mode = 0
offset_left = 192.0
offset_top = 119.0
offset_right = 3862.0
offset_bottom = 789.0
scale = Vector2(0.1, 0.1)
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("2_gk5do")
theme_override_font_sizes/normal_font_size = 300
bbcode_enabled = true

[node name="ChosenWord" type="RichTextLabel" parent="TextureRect2"]
layout_mode = 0
offset_left = 191.0
offset_top = 231.0
offset_right = 3801.0
offset_bottom = 1091.0
scale = Vector2(0.1, 0.1)
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("2_gk5do")
theme_override_font_sizes/normal_font_size = 300
bbcode_enabled = true

[node name="CurrentPassword" type="RichTextLabel" parent="TextureRect2"]
layout_mode = 0
offset_left = 162.0
offset_top = 335.0
offset_right = 4212.0
offset_bottom = 1055.0
scale = Vector2(0.1, 0.1)
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("2_gk5do")
theme_override_font_sizes/normal_font_size = 300
bbcode_enabled = true

[node name="HackTimeEstimate" type="RichTextLabel" parent="TextureRect2"]
layout_mode = 0
offset_left = 169.0
offset_top = 418.0
offset_right = 3469.0
offset_bottom = 858.0
scale = Vector2(0.1, 0.1)
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("2_gk5do")
theme_override_font_sizes/normal_font_size = 300
bbcode_enabled = true
text = "Hackable in:[wave amp=90 fr] ~2000 years[/wave]"

[node name="ContinueButton" type="TextureButton" parent="TextureRect2"]
layout_mode = 0
offset_left = 259.0
offset_top = 442.0
offset_right = 490.0
offset_bottom = 546.0
texture_normal = ExtResource("4_fxt1j")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="TextureRect2/ContinueButton"]
layout_mode = 0
offset_left = 66.0
offset_top = 35.0
offset_right = 11826.0
offset_bottom = 3285.0
scale = Vector2(0.01, 0.01)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_gk5do")
theme_override_font_sizes/font_size = 3000
text = "Continue?"
